--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -18,7 +18,7 @@
 
   &__box-title {
     text-transform: uppercase;
-    font-family: 'Commissioner', sans-serif;
+    font-family: "Commissioner", sans-serif;
     font-size: 2.8rem;
   }
 
@@ -29,42 +29,62 @@
 
   &__box-btn-contact {
     padding: 0.5em 2em;
-    font-family: 'Concert One', sans-serif;
+    font-family: "Concert One", sans-serif;
     font-size: 1.8rem;
     text-transform: uppercase;
     border: 1px solid transparent;
-    background-color:  #F08516;
-    transition: border .3s, background-color .3s;
+    background-color: #f08516;
+    transition: border 0.3s, background-color 0.3s;
     cursor: pointer;
     z-index: 1;
 
     &:hover {
-      border: 1px solid #F08516;
+      border: 1px solid #f08516;
       background-color: white;
     }
   }
 
-  &__box-img {
+  img {
     position: relative;
-    margin-top: 4em;
     height: 150px;
+    width: 100%;
+    object-fit: cover;
+    margin-top: 4em;
     z-index: -1;
-    
-    img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
 
     &::before {
-      content: '';
+      content: "";
       position: absolute;
       top: 0;
       left: 0;
       width: 100%;
       height: 100%;
-      background-color: rgba(0,0,0, .3);
+      background-color: rgba(0, 0, 0, 0.3);
       z-index: 1;
     }
   }
+
+  // &__box-img {
+  //   position: relative;
+  //   margin-top: 4em;
+  //   height: 150px;
+  //   z-index: -1;
+
+  //   img {
+  //     width: 100%;
+  //     height: 100%;
+  //     object-fit: cover;
+  //   }
+
+  //   &::before {
+  //     content: '';
+  //     position: absolute;
+  //     top: 0;
+  //     left: 0;
+  //     width: 100%;
+  //     height: 100%;
+  //     background-color: rgba(0,0,0, .3);
+  //     z-index: 1;
+  //   }
+  // }
 }
