--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -124,7 +124,7 @@
     }
 
     &__item {
-      font-size: 4.2rem;
+      font-size: 3.2rem;
     }
 
     &__logo-link {
